--- a/examples/developer-debug-mode/index.html
+++ b/examples/developer-debug-mode/index.html
@@ -10,7 +10,7 @@
           media='screen'
           href='/css/style.css'/>
 
-    <script src="/openseadragon/openseadragon.js"></script>
+    <script src="/openseadragon/openseadragon.min.js"></script>
 </head>
 
 <body>
@@ -20,9 +20,9 @@
        alt="Fork me on GitHub" /></a>
   <div id="container">
     <div class="download">
-        <a href="https://github.com/thatcher/openseadragon/zipball/master">
+        <a href="/openseadragon.zip">
             <img border="0" width="90" src="/images/zip.png"></a>
-        <a href="https://github.com/thatcher/openseadragon/tarball/master">
+        <a href="/openseadragon.tar">
             <img border="0" width="90" src="/images/tar.png"></a>
     </div>
     <h1>
@@ -215,8 +215,8 @@ The relevant configuration options are shown below.
     <h2 id='download'>Download</h2>
     <p>
         You can download this project in either
-        <a href="https://github.com/thatcher/openseadragon/zipball/master">zip</a> or
-        <a href="https://github.com/thatcher/openseadragon/tarball/master">tar formats.
+        <a href="/openseadragon.zip">zip</a> or
+        <a href="/openseadragon.tar">tar formats.
     </p>
     <p>
         You can also clone the project with <a href="http://git-scm.com">Git</a>
