--- a/examples/tilesource-legacy/index.html
+++ b/examples/tilesource-legacy/index.html
@@ -279,7 +279,7 @@ OpenSeadragon({
 </pre>
 
 <div class="description">
-    <h3>One example showing an image with a different aspect ratio.s</h3>
+    <h3>An example showing using an image with a different aspect ratio.</h3>
 </div>
 
 <div class="demoarea">
