--- a/examples/tilesource-legacy/index.html
+++ b/examples/tilesource-legacy/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
 
-    <title>Legacy Tile Sources |  OpenSeadragon 0.9.120</title>
+    <title>Legacy Tile Sources |  OpenSeadragon 0.9.121</title>
 
     <link rel='stylesheet' 
           type='text/css'
@@ -279,7 +279,7 @@ OpenSeadragon({
 </pre>
 
 <div class="description">
-    <h3>An example showing using an image with a different aspect ratio.</h3>
+    <h3>One example showing an image with a different aspect ratio.s</h3>
 </div>
 
 <div class="demoarea">
