adding grint file to make running local server easy.  should make sure that package.json is copied as part of build. TODO

--- a/examples/tilesource-osm/index.html
+++ b/examples/tilesource-osm/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
 
-    <title>Open Street Maps Tile Source |  OpenSeadragon 0.9.120</title>
+    <title>Open Street Maps Tile Source |  OpenSeadragon 0.9.122</title>
 
     <link rel='stylesheet' 
           type='text/css'
@@ -26,7 +26,7 @@
             <img border="0" width="90" src="/images/tar.png"></a>
     </div>
     <h1>
-        <a href="/openseadragon">OpenSeadragon</a>
+        <a href="/">OpenSeadragon</a>
         <span style='font-size:12px;float:left;margin-left:10px;'>
         Try it on the iPad! (new since 0.9)
         </span>
