Publishing recent fixes to site-build

--- a/examples/tilesource-collection/index.html
+++ b/examples/tilesource-collection/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
 
-    <title>Tile Source Collections | OpenSeadragon 0.9.124</title>
+    <title>Tile Source Collections | OpenSeadragon</title>
 
     <link rel='stylesheet' 
           type='text/css'
@@ -26,9 +26,11 @@
             <img border="0" width="90" src="/images/tar.png"></a>
     </div>
     <h1>
-        <a href="/">OpenSeadragon</a>
-        <span style='font-size:12px;float:left;margin-left:10px;'>
-        Try it on the iPad! (new since 0.9)
+        <a href="/">OpenSeadragon</a><span class="version">
+            0.9.124
+        </span>
+        <span class="tagline">
+            Try it on the iPad! (new since 0.9)
         </span>
     </h1>
 
@@ -56,7 +58,7 @@
     The image collection is a major hurdle for OpenSeadragon. It allows arbitrarily 
     large sets of tile sources, of mixed types, to be used to easily visualize the
     group as 'wall' or 'grid'.  Many core features are available for preview now, though
-    the
+    it's still a work in progress.
 </p>
 <p>
     No doubt this makes OpenSeadragon into a whole new platform for deepzoom
@@ -880,7 +882,7 @@ OpenSeadragon({
     <p>
         You can download this project in either
         <a href="/openseadragon.zip">zip</a> or
-        <a href="/openseadragon.tar">tar formats.
+        <a href="/openseadragon.tar">tar</a> formats.
     </p>
     <p>
         You can also clone the project with <a href="http://git-scm.com">Git</a>
