--- a/examples/tilesource-osm/index.html
+++ b/examples/tilesource-osm/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
 
-    <title>Open Street Maps Tile Source | OpenSeadragon 0.9.124</title>
+    <title>Open Street Maps Tile Source | OpenSeadragon</title>
 
     <link rel='stylesheet' 
           type='text/css'
@@ -26,9 +26,11 @@
             <img border="0" width="90" src="/images/tar.png"></a>
     </div>
     <h1>
-        <a href="/">OpenSeadragon</a>
-        <span style='font-size:12px;float:left;margin-left:10px;'>
-        Try it on the iPad! (new since 0.9)
+        <a href="/">OpenSeadragon</a><span class="version">
+            0.9.124
+        </span>
+        <span class="tagline">
+            Try it on the iPad! (new since 0.9)
         </span>
     </h1>
 
@@ -237,7 +239,7 @@ OpenSeadragon({
     <p>
         You can download this project in either
         <a href="/openseadragon.zip">zip</a> or
-        <a href="/openseadragon.tar">tar formats.
+        <a href="/openseadragon.tar">tar</a> formats.
     </p>
     <p>
         You can also clone the project with <a href="http://git-scm.com">Git</a>
