--- a/examples/ui-toolbar/index.html
+++ b/examples/ui-toolbar/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
 
-    <title>Toolbar | OpenSeadragon 0.9.124</title>
+    <title>Toolbar | OpenSeadragon</title>
 
     <link rel='stylesheet' 
           type='text/css'
@@ -26,9 +26,11 @@
             <img border="0" width="90" src="/images/tar.png"></a>
     </div>
     <h1>
-        <a href="/">OpenSeadragon</a>
-        <span style='font-size:12px;float:left;margin-left:10px;'>
-        Try it on the iPad! (new since 0.9)
+        <a href="/">OpenSeadragon</a><span class="version">
+            0.9.124
+        </span>
+        <span class="tagline">
+            Try it on the iPad! (new since 0.9)
         </span>
     </h1>
 
@@ -52,12 +54,10 @@
     <h2>example: toolbar</h2>
 
 <div class="description">
-    <p>
     Although OpenSeadragon provides default buttons which are overlayed on the Viewport,
     there are many use cases where the presentation may require a more traditional
     'toolbar'.  OpenSeadragon now allows you to very simply dock your controls 
     inside any element on the page which the end user has presentation control over.
-    </p>
 </div>
 
 <div class="demoarea">
@@ -213,7 +213,7 @@ mode, even though its not otherwise related to the viewer / viewport DOM.
     <p>
         You can download this project in either
         <a href="/openseadragon.zip">zip</a> or
-        <a href="/openseadragon.tar">tar formats.
+        <a href="/openseadragon.tar">tar</a> formats.
     </p>
     <p>
         You can also clone the project with <a href="http://git-scm.com">Git</a>
