--- a/examples/ui-viewport-navigator/index.html
+++ b/examples/ui-viewport-navigator/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
 
-    <title>Viewport Navigator | OpenSeadragon 0.9.124</title>
+    <title>Viewport Navigator | OpenSeadragon</title>
 
     <link rel='stylesheet' 
           type='text/css'
@@ -26,9 +26,11 @@
             <img border="0" width="90" src="/images/tar.png"></a>
     </div>
     <h1>
-        <a href="/">OpenSeadragon</a>
-        <span style='font-size:12px;float:left;margin-left:10px;'>
-        Try it on the iPad! (new since 0.9)
+        <a href="/">OpenSeadragon</a><span class="version">
+            0.9.124
+        </span>
+        <span class="tagline">
+            Try it on the iPad! (new since 0.9)
         </span>
     </h1>
 
@@ -52,13 +54,11 @@
     <h2>example: viewport navigator</h2>
 
 <div class="description">
-    <p>
     A viewport navigator allows the user to see the source image displayed
     as a reference image with a highlighted area showing which portion of
     the image they are currently viewing in the viewport. The navigator
     reuses the image sources provided by the viewport so no additional
     image derivatives are required. 
-    </p>
 </div>
 
 <div class="demoarea">
@@ -225,7 +225,7 @@ the highlight will change to blue-ish, and you can use the following keys:
     <p>
         You can download this project in either
         <a href="/openseadragon.zip">zip</a> or
-        <a href="/openseadragon.tar">tar formats.
+        <a href="/openseadragon.tar">tar</a> formats.
     </p>
     <p>
         You can also clone the project with <a href="http://git-scm.com">Git</a>
