--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
 
-    <title>OpenSeadragon 0.9.124</title>
+    <title>OpenSeadragon</title>
 
     <link rel='stylesheet' 
           type='text/css'
@@ -26,9 +26,11 @@
             <img border="0" width="90" src="/images/tar.png"></a>
     </div>
     <h1>
-        <a href="/">OpenSeadragon</a>
-        <span style='font-size:12px;float:left;margin-left:10px;'>
-        Try it on the iPad! (new since 0.9)
+        <a href="/">OpenSeadragon</a><span class="version">
+            0.9.124
+        </span>
+        <span class="tagline">
+            Try it on the iPad! (new since 0.9)
         </span>
     </h1>
 
@@ -49,17 +51,16 @@
         </ul>
     </div>
 
-    <h2>refactored</h2>
+    <h2>OpenSeadragon</h2>
 
 <div class="description">
-  Fork of OpenSeadragon (from its mercurial repository).  We are working to
-  refactor the code base and see what happens from there. <br/><br/>
-  <strong>Try it on the iPad! (new since 0.9)</strong>
+    An open-source, web-based viewer for zoomable images, implemented in pure
+    JavaScript.
 </div>
 
 <div class="demoarea">
     <div class="demoheading">
-        Seadragon control with default properties
+        OpenSeadragon control with default properties
         <span id='consolelog'></span>
     </div>
     <div id="contentDiv" class="openseadragon"></div>
@@ -198,7 +199,7 @@
     <p>
         You can download this project in either
         <a href="/openseadragon.zip">zip</a> or
-        <a href="/openseadragon.tar">tar formats.
+        <a href="/openseadragon.tar">tar</a> formats.
     </p>
     <p>
         You can also clone the project with <a href="http://git-scm.com">Git</a>
