We now have a releases page and a support section

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
        alt="Fork me on GitHub" /></a>
   <div id="container">
     <div class="download">
-        <a href="/openseadragon.zip">
+        <a href="/releases/openseadragon-bin-0.9.124.zip">
             <img border="0" width="90" src="/images/zip.png"></a>
-        <a href="/openseadragon.tar">
+        <a href="/releases/openseadragon-bin-0.9.124.tar.gz">
             <img border="0" width="90" src="/images/tar.png"></a>
     </div>
     <h1>
@@ -42,8 +42,10 @@
                 >Download</a></li>
             <li><a href='/#installing'
                 >Installing</a></li>
-            <li><a href='/#api-documentation'
+            <li><a href='/docs/'
                 >API Documentation</a></li>
+            <li><a href='/#support'
+                >Support</a></li>
             <li><a href='/#development'
                 >Development</a></li>
             <li><a href='/#license'
@@ -184,8 +186,12 @@
 <h2 id='download'>Download</h2>
 <p>
     You can download OpenSeadragon 0.9.124 in
-    <a href="/openseadragon.zip">zip</a> or
-    <a href="/openseadragon.tar">tar</a> formats.
+    <a href="/releases/openseadragon-bin-0.9.124.zip">zip</a> or
+    <a href="/releases/openseadragon-bin-0.9.124.tar.gz">tar.gz</a> formats.
+</p>
+<p>
+    Older releases and source archives are available from the
+    <a href="/releases/">releases page</a>.
 </p>
 
 
@@ -198,21 +204,16 @@ OpenSeadragon in a page.
 </p>
 
 
-<h2 id='api-documentation'>API Documentation</h2>
-<p>is available <a href='/docs/'>here</a>.  The
-documentation has not yet been closely aligned with our release cycle.
-We try to minimize backward-incompatible API changes, but during the 0.x
-release cycle we are taking some liberty to do so when it makes sense.
-Please keep these caveats in mind when referencing the API documentation.</p>
+<h2 id='support'>Support</h2>
+<p>To report an issue, use our <a href="https://github.com/openseadragon/openseadragon/issues">issue tracker</a>.</p>
+<p>We're <a href="https://twitter.com/openseadragon">@OpenSeadragon</a> on Twitter, and you can find us in the #openseadragon IRC channel on irc.freenode.net (<a href="irc://irc.freenode.net/#openseadragon">launch on desktop</a> or <a href="http://webchat.freenode.net/?channels=openseadragon">chat in the browser</a>).</p>
 
 
 <h2 id='development'>Development</h2>
 <p>
     OpenSeadragon is
     <a href="https://github.com/openseadragon/openseadragon">
-    developed on GitHub</a>.  To report an issue, use our
-    <a href="https://github.com/openseadragon/openseadragon/issues">
-    issue tracker</a>.  You can clone the source repository with
+    developed on GitHub</a>. You can clone the source repository with
     <a href="http://git-scm.com/">Git</a> by running:
     <pre>git clone git://github.com/openseadragon/openseadragon</pre>
 </p>
