Doc and support links and sections

--- a/index.html
+++ b/index.html
@@ -204,9 +204,14 @@ OpenSeadragon in a page.
 </p>
 
 
+<h2 id='api-documentation'>API Documentation</h2>
+<p>Available on our <a href="/docs/">documentation pages</a>.</p>
+
+
 <h2 id='support'>Support</h2>
-<p>To report an issue, use our <a href="https://github.com/openseadragon/openseadragon/issues">issue tracker</a>.</p>
-<p>We're <a href="https://twitter.com/openseadragon">@OpenSeadragon</a> on Twitter, and you can find us in the #openseadragon IRC channel on irc.freenode.net (<a href="irc://irc.freenode.net/#openseadragon">launch on desktop</a> or <a href="http://webchat.freenode.net/?channels=openseadragon">chat in the browser</a>).</p>
+<p>GitHub: <a href="https://github.com/openseadragon/openseadragon/issues">issue tracker</a></p>
+<p>Twitter: <a href="https://twitter.com/openseadragon">@OpenSeadragon</a></p>
+<p>IRC: #openseadragon on irc.freenode.net (<a href="irc://irc.freenode.net/#openseadragon">launch on desktop</a> or <a href="http://webchat.freenode.net/?channels=openseadragon">chat in the browser</a>)</p>
 
 
 <h2 id='development'>Development</h2>
@@ -236,8 +241,10 @@ OpenSeadragon in a page.
             >Download</a></li>
         <li><a href='/#installing'
             >Installing</a></li>
-        <li><a href='/#api-documentation'
+        <li><a href='/docs/'
             >API Documentation</a></li>
+        <li><a href='/#support'
+            >Support</a></li>
         <li><a href='/#development'
             >Development</a></li>
         <li><a href='/#license'
