--- a/releases/index.html
+++ b/releases/index.html
@@ -78,8 +78,10 @@
             >Download</a></li>
         <li><a href='/#installing'
             >Installing</a></li>
-        <li><a href='/#api-documentation'
+        <li><a href='/docs/'
             >API Documentation</a></li>
+        <li><a href='/#support'
+            >Support</a></li>
         <li><a href='/#development'
             >Development</a></li>
         <li><a href='/#license'
