--- a/examples/ui-binding-custom-buttons/index.html
+++ b/examples/ui-binding-custom-buttons/index.html
@@ -187,8 +187,10 @@ OpenSeadragon({
             >Download</a></li>
         <li><a href='/#installing'
             >Installing</a></li>
-        <li><a href='/#api-documentation'
+        <li><a href='/docs/'
             >API Documentation</a></li>
+        <li><a href='/#support'
+            >Support</a></li>
         <li><a href='/#development'
             >Development</a></li>
         <li><a href='/#license'
