--- a/examples/ui-viewport-navigator/index.html
+++ b/examples/ui-viewport-navigator/index.html
@@ -113,8 +113,10 @@ will change to blue-ish and you can use the following keys:
             >Download</a></li>
         <li><a href='/#installing'
             >Installing</a></li>
-        <li><a href='/#api-documentation'
+        <li><a href='/docs/'
             >API Documentation</a></li>
+        <li><a href='/#support'
+            >Support</a></li>
         <li><a href='/#development'
             >Development</a></li>
         <li><a href='/#license'
