--- a/examples/ui-zoom-and-pan/index.html
+++ b/examples/ui-zoom-and-pan/index.html
@@ -188,8 +188,10 @@ maximum zoom range as well as the range of panning.
             >Download</a></li>
         <li><a href='/#installing'
             >Installing</a></li>
-        <li><a href='/#api-documentation'
+        <li><a href='/docs/'
             >API Documentation</a></li>
+        <li><a href='/#support'
+            >Support</a></li>
         <li><a href='/#development'
             >Development</a></li>
         <li><a href='/#license'
