Changing front image to .dzi from .js

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     OpenSeadragon({
         id:              "contentDiv",
         prefixUrl:       "/openseadragon/images/",
-        tileSources:     "/example-images/highsmith/highsmith.js"
+        tileSources:     "/example-images/highsmith/highsmith.dzi"
     });
 </script>
 
