Added Google Analytics

--- a/examples/ui-binding-custom-buttons/index.html
+++ b/examples/ui-binding-custom-buttons/index.html
@@ -18,42 +18,42 @@
        style="position: absolute; top: 0; right: 0; border: 0;" 
        src="/images/forkme_right_darkblue_121621.png" 
        alt="Fork me on GitHub" /></a>
-  <div id="container">
-    <div class="download">
-        <a href="/releases/openseadragon-bin-0.9.126.zip">
-            <img border="0" width="90" src="/images/zip.png"></a>
-        <a href="/releases/openseadragon-bin-0.9.126.tar.gz">
-            <img border="0" width="90" src="/images/tar.png"></a>
-    </div>
-    <h1>
-        <a href="/">OpenSeadragon</a><span class="version">
-            0.9.126
-        </span>
-        <span class="tagline">
-            Try it on the iPad! (new since 0.9)
-        </span>
-    </h1>
+    <div id="container">
+        <div class="download">
+            <a href="/releases/openseadragon-bin-0.9.126.zip">
+                <img border="0" width="90" src="/images/zip.png"></a>
+            <a href="/releases/openseadragon-bin-0.9.126.tar.gz">
+                <img border="0" width="90" src="/images/tar.png"></a>
+        </div>
+        <h1>
+            <a href="/">OpenSeadragon</a><span class="version">
+                0.9.126
+            </span>
+            <span class="tagline">
+                Try it on the iPad! (new since 0.9)
+            </span>
+        </h1>
 
-    <div class='navigation'>
-        <ul>
-            <li><a href='/#examples-and-features'
-                >Examples &amp; Features</a></li>
-            <li><a href='/#download'
-                >Download</a></li>
-            <li><a href='/#installing'
-                >Installing</a></li>
-            <li><a href='/docs/'
-                >API Documentation</a></li>
-            <li><a href='/#support'
-                >Support</a></li>
-            <li><a href='/#development'
-                >Development</a></li>
-            <li><a href='/#license'
-                >License</a></li>
-        </ul>
-    </div>
+        <div class='navigation'>
+            <ul>
+                <li><a href='/#examples-and-features'
+                    >Examples &amp; Features</a></li>
+                <li><a href='/#download'
+                    >Download</a></li>
+                <li><a href='/#installing'
+                    >Installing</a></li>
+                <li><a href='/docs/'
+                    >API Documentation</a></li>
+                <li><a href='/#support'
+                    >Support</a></li>
+                <li><a href='/#development'
+                    >Development</a></li>
+                <li><a href='/#license'
+                    >License</a></li>
+            </ul>
+        </div>
 
-    <h2>example: binding custom buttons</h2>
+        <h2>example: binding custom buttons</h2>
 
 <p>
     You can bind to an entirely custom user interface by passing the IDs of
@@ -180,23 +180,32 @@ OpenSeadragon({
 </pre>
 
 
-    <ul class="footer">
-        <li><a href='/#examples-and-features'
-            >Examples &amp; Features</a></li>
-        <li><a href='/#download'
-            >Download</a></li>
-        <li><a href='/#installing'
-            >Installing</a></li>
-        <li><a href='/docs/'
-            >API Documentation</a></li>
-        <li><a href='/#support'
-            >Support</a></li>
-        <li><a href='/#development'
-            >Development</a></li>
-        <li><a href='/#license'
-            >License</a></li>
-    </ul>
-  </div>
+        <ul class="footer">
+            <li><a href='/#examples-and-features'
+                >Examples &amp; Features</a></li>
+            <li><a href='/#download'
+                >Download</a></li>
+            <li><a href='/#installing'
+                >Installing</a></li>
+            <li><a href='/docs/'
+                >API Documentation</a></li>
+            <li><a href='/#support'
+                >Support</a></li>
+            <li><a href='/#development'
+                >Development</a></li>
+            <li><a href='/#license'
+                >License</a></li>
+        </ul>
+    </div>
+
+    <script> // Google Analytics
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-40891712-1', 'github.io');
+        ga('send', 'pageview');
+    </script>
 
 </body>
 </html>
