--- a/examples/developer-debug-mode/index.html
+++ b/examples/developer-debug-mode/index.html
@@ -116,7 +116,7 @@ OpenSeadragon({
                 >Support</a></li>
             <li><a href='/#development'
                 >Development</a></li>
-            <li><a href='/#license'
+            <li><a href='/license/'
                 >License</a></li>
         </ul>
     </div>
