--- a/index.html
+++ b/index.html
@@ -225,12 +225,9 @@ OpenSeadragon in a page.
 
 
 <h2 id='license'>License</h2>
-<p>The original license is a
-    <a href='https://raw.github.com/openseadragon/openseadragon/master/licenses/new-bsd.txt'
-    >New BSD</a> style license.</p>
-    <p>This project adds an
-    <a href='https://raw.github.com/openseadragon/openseadragon/master/licenses/mit.txt'
-    >MIT</a> style license.
+<p>
+    OpenSeadragon is released under the <a href='/license/'>New BSD</a>
+    license.
 </p>
 
 
@@ -247,7 +244,7 @@ OpenSeadragon in a page.
                 >Support</a></li>
             <li><a href='/#development'
                 >Development</a></li>
-            <li><a href='/#license'
+            <li><a href='/license/'
                 >License</a></li>
         </ul>
     </div>
