--- a/examples/tilesource-collection/index.html
+++ b/examples/tilesource-collection/index.html
@@ -772,7 +772,7 @@ OpenSeadragon({
                 >Support</a></li>
             <li><a href='/#development'
                 >Development</a></li>
-            <li><a href='/#license'
+            <li><a href='/license/'
                 >License</a></li>
         </ul>
     </div>
