--- a/examples/ui-binding-custom-buttons/index.html
+++ b/examples/ui-binding-custom-buttons/index.html
@@ -193,7 +193,7 @@ OpenSeadragon({
                 >Support</a></li>
             <li><a href='/#development'
                 >Development</a></li>
-            <li><a href='/#license'
+            <li><a href='/license/'
                 >License</a></li>
         </ul>
     </div>
