--- a/examples/ui-zoom-and-pan/index.html
+++ b/examples/ui-zoom-and-pan/index.html
@@ -194,7 +194,7 @@ maximum zoom range as well as the range of panning.
                 >Support</a></li>
             <li><a href='/#development'
                 >Development</a></li>
-            <li><a href='/#license'
+            <li><a href='/license/'
                 >License</a></li>
         </ul>
     </div>
