--- a/releases/index.html
+++ b/releases/index.html
@@ -96,7 +96,7 @@
                 >Support</a></li>
             <li><a href='/#development'
                 >Development</a></li>
-            <li><a href='/#license'
+            <li><a href='/license/'
                 >License</a></li>
         </ul>
     </div>
