Changed "International Image Interchange Format" to "International Image Interoperability Framework"

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <span>Legacy Image Pyramids</span>
             </a></li>
             <li><a href='/examples/tilesource-iiif/'>
-                <span>IIIF (International Image Interchange Format)</span>
+                <span>IIIF (International Image Interoperability Framework)</span>
             </a></li>
             <li><a href='/examples/tilesource-dzi/'>
                 <span>DZI (Deep Zoom Images)</span>
