--- a/examples/tilesource-iiif/index.html
+++ b/examples/tilesource-iiif/index.html
@@ -117,7 +117,7 @@ OpenSeadragon({
         "formats":      [ "jpg", "png" ],   
         "qualities":    ["native", "bitonal", "grey", "color"],   
         "profile":      "http://library.stanford.edu/iiif/image-api/compliance.html#level1",
-        "image_host":   "http://img.princeton.edu/loris"
+        "image_host":   "http://lorisimg.princeton.edu/loris"
     },
        ...
     ]
@@ -133,7 +133,7 @@ OpenSeadragon({
         minZoomLevel:       1,
         defaultZoomLevel:   1,
         tileSources:   [{
-            "image_host":     "http://img.princeton.edu/loris",
+            "image_host":     "http://lorisimg.princeton.edu/loris",
             "identifier":   "pudl0001/4609321/s42/00000001",   
             "width":        2617,   
             "height":       3600,   
@@ -144,7 +144,7 @@ OpenSeadragon({
             "qualities":    ["native", "bitonal", "grey", "color"],   
             "profile":      "http://library.stanford.edu/iiif/image-api/compliance.html#level1"
         },{
-            "image_host":     "http://img.princeton.edu/loris",
+            "image_host":     "http://lorisimg.princeton.edu/loris",
             "identifier":   "pudl0001/4609321/s42/00000002",   
             "width":        2547,   
             "height":       3600,   
@@ -155,7 +155,7 @@ OpenSeadragon({
             "qualities":    ["native", "bitonal", "grey", "color"],   
             "profile":      "http://library.stanford.edu/iiif/image-api/compliance.html#level1"
         },{
-            "image_host":     "http://img.princeton.edu/loris",
+            "image_host":     "http://lorisimg.princeton.edu/loris",
             "identifier":   "pudl0001/4609321/s42/00000003",   
             "width":        2694,   
             "height":       3600,   
@@ -166,7 +166,7 @@ OpenSeadragon({
             "qualities":    ["native", "bitonal", "grey", "color"],   
             "profile":      "http://library.stanford.edu/iiif/image-api/compliance.html#level1"
         },{
-            "image_host":     "http://img.princeton.edu/loris",
+            "image_host":     "http://lorisimg.princeton.edu/loris",
             "identifier":   "pudl0001/4609321/s42/00000004",   
             "width":        2717,   
             "height":       3600,   
@@ -177,7 +177,7 @@ OpenSeadragon({
             "qualities":    ["native", "bitonal", "grey", "color"],   
             "profile":      "http://library.stanford.edu/iiif/image-api/compliance.html#level1"
         },{
-            "image_host":     "http://img.princeton.edu/loris",
+            "image_host":     "http://lorisimg.princeton.edu/loris",
             "identifier":   "pudl0001/4609321/s42/00000005",   
             "width":        2694,   
             "height":       3600,   
@@ -188,7 +188,7 @@ OpenSeadragon({
             "qualities":    ["native", "bitonal", "grey", "color"],   
             "profile":      "http://library.stanford.edu/iiif/image-api/compliance.html#level1"
         },{
-            "image_host":     "http://img.princeton.edu/loris",
+            "image_host":     "http://lorisimg.princeton.edu/loris",
             "identifier":   "pudl0001/4609321/s42/00000006",   
             "width":        2717,   
             "height":       3600,   
@@ -199,7 +199,7 @@ OpenSeadragon({
             "qualities":    ["native", "bitonal", "grey", "color"],   
             "profile":      "http://library.stanford.edu/iiif/image-api/compliance.html#level1"
         },{
-            "image_host":     "http://img.princeton.edu/loris",
+            "image_host":     "http://lorisimg.princeton.edu/loris",
             "identifier":   "pudl0001/4609321/s42/00000007",   
             "width":        2694,   
             "height":       3600,   
@@ -272,7 +272,7 @@ OpenSeadragon({
         &lt;quality>color&lt;/quality>
     &lt;/qualities>
     &lt;profile>http://library.stanford.edu/iiif/image-api/compliance.html#level1&lt;/profile>
-    &lt;image_host>http://img.princeton.edu/loris&lt;/image_host>
+    &lt;image_host>http://lorisimg.princeton.edu/loris&lt;/image_host>
 &lt;/info></pre>
     <p>
         And the equivalent sample IIIF info file formatted as JSON.
@@ -288,7 +288,7 @@ OpenSeadragon({
     "formats" : [ "jpg", "png" ],   
     "qualities" : ["native", "bitonal", "grey", "color"],   
     "profile" : "http://library.stanford.edu/iiif/image-api/compliance.html#level1",
-    "image_host": "http://img.princeton.edu/loris"
+    "image_host": "http://lorisimg.princeton.edu/loris"
 }</pre>
 <pre>
 OpenSeadragon({
