--- a/releases/index.html
+++ b/releases/index.html
@@ -20,14 +20,14 @@
        alt="Fork me on GitHub" /></a>
     <div id="container">
         <div class="download">
-            <a href="/releases/openseadragon-bin-0.9.127.zip">
+            <a href="/releases/openseadragon-bin-0.9.128.zip">
                 <img border="0" width="90" src="/images/zip.png"></a>
-            <a href="/releases/openseadragon-bin-0.9.127.tar.gz">
+            <a href="/releases/openseadragon-bin-0.9.128.tar.gz">
                 <img border="0" width="90" src="/images/tar.png"></a>
         </div>
         <h1>
             <a href="/">OpenSeadragon</a><span class="version">
-                0.9.127
+                0.9.128
             </span>
             <span class="tagline">
                 Try it on the iPad! (new since 0.9)
@@ -61,7 +61,13 @@
         <th class="first-binary" colspan="2">Binaries</th>
         <th class="first-source" colspan="2">Source</th>
     </tr>
-    <tr><th>0.9.127</th>
+    <tr><th>0.9.128</th>
+<td class="first-binary"><a href="openseadragon-bin-0.9.128.zip">zip</a></td>
+<td><a href="openseadragon-bin-0.9.128.tar.gz">tar.gz</a></td>
+<td class="first-source"><a href="https://github.com/openseadragon/openseadragon/archive/v0.9.128.zip">zip</a></td>
+<td><a href="https://github.com/openseadragon/openseadragon/archive/v0.9.128.tar.gz">tar.gz</a></td>
+</tr>
+<tr><th>0.9.127</th>
 <td class="first-binary"><a href="openseadragon-bin-0.9.127.zip">zip</a></td>
 <td><a href="openseadragon-bin-0.9.127.tar.gz">tar.gz</a></td>
 <td class="first-source"><a href="https://github.com/openseadragon/openseadragon/archive/v0.9.127.zip">zip</a></td>
