--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
        alt="Fork me on GitHub" /></a>
     <div id="container">
         <div class="download">
-            <a href="/releases/openseadragon-bin-0.9.127.zip">
+            <a href="/releases/openseadragon-bin-0.9.128.zip">
                 <img border="0" width="90" src="/images/zip.png"></a>
-            <a href="/releases/openseadragon-bin-0.9.127.tar.gz">
+            <a href="/releases/openseadragon-bin-0.9.128.tar.gz">
                 <img border="0" width="90" src="/images/tar.png"></a>
         </div>
         <h1>
             <a href="/">OpenSeadragon</a><span class="version">
-                0.9.127
+                0.9.128
             </span>
             <span class="tagline">
                 Try it on the iPad! (new since 0.9)
@@ -143,6 +143,9 @@
             <li><a href='/examples/ui-binding-custom-buttons/'>
                 <span>Binding Custom Buttons</span>
             </a></li>
+            <li><a href='/examples/ui-keyboard-navigation/'>
+                <span>Keyboard Navigation</span>
+            </a></li>
         </ul>
     </li>
 
@@ -185,9 +188,9 @@
 
 <h2 id='download'>Download</h2>
 <p>
-    You can download OpenSeadragon 0.9.127 in
-    <a href="/releases/openseadragon-bin-0.9.127.zip">zip</a> or
-    <a href="/releases/openseadragon-bin-0.9.127.tar.gz">tar.gz</a> formats.
+    You can download OpenSeadragon 0.9.128 in
+    <a href="/releases/openseadragon-bin-0.9.128.zip">zip</a> or
+    <a href="/releases/openseadragon-bin-0.9.128.tar.gz">tar.gz</a> formats.
 </p>
 <p>
     Older releases and source archives are available from the
