--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
        alt="Fork me on GitHub" /></a>
     <div id="container">
         <div class="download">
-            <a href="/releases/openseadragon-bin-0.9.129.zip">
+            <a href="https://github.com/openseadragon/openseadragon/releases/download/v0.9.129/openseadragon-bin-0.9.129.zip">
                 <img border="0" width="90" src="/images/zip.png"></a>
-            <a href="/releases/openseadragon-bin-0.9.129.tar.gz">
+            <a href="https://github.com/openseadragon/openseadragon/releases/download/v0.9.129/openseadragon-bin-0.9.129.tar.gz">
                 <img border="0" width="90" src="/images/tar.png"></a>
         </div>
         <h1>
@@ -189,12 +189,13 @@
 <h2 id='download'>Download</h2>
 <p>
     You can download OpenSeadragon 0.9.129 in
-    <a href="/releases/openseadragon-bin-0.9.129.zip">zip</a> or
-    <a href="/releases/openseadragon-bin-0.9.129.tar.gz">tar.gz</a> formats.
+    <a href="https://github.com/openseadragon/openseadragon/releases/download/v0.9.129/openseadragon-bin-0.9.129.zip">zip</a> or
+    <a href="https://github.com/openseadragon/openseadragon/releases/download/v0.9.129/openseadragon-bin-0.9.129.tar.gz">tar.gz</a> formats.
 </p>
 <p>
-    Older releases and source archives are available from the
-    <a href="/releases/">releases page</a>.
+    Older releases and source archives are
+    <a href="https://github.com/openseadragon/openseadragon/releases">
+    available on GitHub</a>.
 </p>
 
 
