--- a/releases/index.html
+++ b/releases/index.html
@@ -1,132 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset='utf-8'>
-
     <title>Releases | OpenSeadragon</title>
-
-    <link rel='stylesheet' 
-          type='text/css'
-          media='screen'
-          href='/css/style.css'/>
-
-    <script src="/openseadragon/openseadragon.min.js"></script>
+    <meta charset='utf-8'>
+    <meta http-equiv="refresh" content="0;url=https://github.com/openseadragon/openseadragon/releases"/>
 </head>
 
 <body>
-    <a href="https://github.com/openseadragon/openseadragon"><img 
-       style="position: absolute; top: 0; right: 0; border: 0;" 
-       src="/images/forkme_right_darkblue_121621.png" 
-       alt="Fork me on GitHub" /></a>
-    <div id="container">
-        <div class="download">
-            <a href="/releases/openseadragon-bin-0.9.129.zip">
-                <img border="0" width="90" src="/images/zip.png"></a>
-            <a href="/releases/openseadragon-bin-0.9.129.tar.gz">
-                <img border="0" width="90" src="/images/tar.png"></a>
-        </div>
-        <h1>
-            <a href="/">OpenSeadragon</a><span class="version">
-                0.9.129
-            </span>
-            <span class="tagline">
-                Try it on the iPad! (new since 0.9)
-            </span>
-        </h1>
-
-        <div class='navigation'>
-            <ul>
-                <li><a href='/#examples-and-features'
-                    >Examples &amp; Features</a></li>
-                <li><a href='/#download'
-                    >Download</a></li>
-                <li><a href='/#installing'
-                    >Installing</a></li>
-                <li><a href='/docs/'
-                    >API Documentation</a></li>
-                <li><a href='/#support'
-                    >Support</a></li>
-                <li><a href='/#development'
-                    >Development</a></li>
-                <li><a href='/#license'
-                    >License</a></li>
-            </ul>
-        </div>
-
-        <h2>releases</h2>
-
-<table class="releases">
-    <tr>
-        <th></th>
-        <th class="first-binary" colspan="2">Binaries</th>
-        <th class="first-source" colspan="2">Source</th>
-    </tr>
-    <tr><th>0.9.129</th>
-<td class="first-binary"><a href="openseadragon-bin-0.9.129.zip">zip</a></td>
-<td><a href="openseadragon-bin-0.9.129.tar.gz">tar.gz</a></td>
-<td class="first-source"><a href="https://github.com/openseadragon/openseadragon/archive/v0.9.129.zip">zip</a></td>
-<td><a href="https://github.com/openseadragon/openseadragon/archive/v0.9.129.tar.gz">tar.gz</a></td>
-</tr>
-<tr><th>0.9.128</th>
-<td class="first-binary"><a href="openseadragon-bin-0.9.128.zip">zip</a></td>
-<td><a href="openseadragon-bin-0.9.128.tar.gz">tar.gz</a></td>
-<td class="first-source"><a href="https://github.com/openseadragon/openseadragon/archive/v0.9.128.zip">zip</a></td>
-<td><a href="https://github.com/openseadragon/openseadragon/archive/v0.9.128.tar.gz">tar.gz</a></td>
-</tr>
-<tr><th>0.9.127</th>
-<td class="first-binary"><a href="openseadragon-bin-0.9.127.zip">zip</a></td>
-<td><a href="openseadragon-bin-0.9.127.tar.gz">tar.gz</a></td>
-<td class="first-source"><a href="https://github.com/openseadragon/openseadragon/archive/v0.9.127.zip">zip</a></td>
-<td><a href="https://github.com/openseadragon/openseadragon/archive/v0.9.127.tar.gz">tar.gz</a></td>
-</tr>
-<tr><th>0.9.126</th>
-<td class="first-binary"><a href="openseadragon-bin-0.9.126.zip">zip</a></td>
-<td><a href="openseadragon-bin-0.9.126.tar.gz">tar.gz</a></td>
-<td class="first-source"><a href="https://github.com/openseadragon/openseadragon/archive/v0.9.126.zip">zip</a></td>
-<td><a href="https://github.com/openseadragon/openseadragon/archive/v0.9.126.tar.gz">tar.gz</a></td>
-</tr>
-<tr><th>0.9.125</th>
-<td class="first-binary"><a href="openseadragon-bin-0.9.125.zip">zip</a></td>
-<td><a href="openseadragon-bin-0.9.125.tar.gz">tar.gz</a></td>
-<td class="first-source"><a href="https://github.com/openseadragon/openseadragon/archive/v0.9.125.zip">zip</a></td>
-<td><a href="https://github.com/openseadragon/openseadragon/archive/v0.9.125.tar.gz">tar.gz</a></td>
-</tr>
-<tr><th>0.9.124</th>
-<td class="first-binary"><a href="openseadragon-bin-0.9.124.zip">zip</a></td>
-<td><a href="openseadragon-bin-0.9.124.tar.gz">tar.gz</a></td>
-<td class="first-source"><a href="https://github.com/openseadragon/openseadragon/archive/v0.9.124.zip">zip</a></td>
-<td><a href="https://github.com/openseadragon/openseadragon/archive/v0.9.124.tar.gz">tar.gz</a></td>
-</tr>
-
-</table>
-
-
-        <ul class="footer">
-            <li><a href='/#examples-and-features'
-                >Examples &amp; Features</a></li>
-            <li><a href='/#download'
-                >Download</a></li>
-            <li><a href='/#installing'
-                >Installing</a></li>
-            <li><a href='/docs/'
-                >API Documentation</a></li>
-            <li><a href='/#support'
-                >Support</a></li>
-            <li><a href='/#development'
-                >Development</a></li>
-            <li><a href='/license/'
-                >License</a></li>
-        </ul>
-    </div>
-
-    <script> // Google Analytics
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        ga('create', 'UA-40891712-1', 'github.io');
-        ga('send', 'pageview');
-    </script>
-
+    Redirecting...
 </body>
 </html>
