--- a/examples/ui-viewport-navigator/index.html
+++ b/examples/ui-viewport-navigator/index.html
@@ -38,6 +38,8 @@
             <ul>
                 <li><a href='/#examples-and-features'
                     >Examples &amp; Features</a></li>
+                <li><a href='/#plugins'
+                    >Plugins</a></li>
                 <li><a href='/#download'
                     >Download</a></li>
                 <li><a href='/#installing'
@@ -187,6 +189,8 @@ does not autofade.
         <ul class="footer">
             <li><a href='/#examples-and-features'
                 >Examples &amp; Features</a></li>
+            <li><a href='/#plugins'
+                >Plugins</a></li>
             <li><a href='/#download'
                 >Download</a></li>
             <li><a href='/#installing'
