--- a/examples/tilesource-legacy/index.html
+++ b/examples/tilesource-legacy/index.html
@@ -38,6 +38,8 @@
             <ul>
                 <li><a href='/#examples-and-features'
                     >Examples &amp; Features</a></li>
+                <li><a href='/#plugins'
+                    >Plugins</a></li>
                 <li><a href='/#download'
                     >Download</a></li>
                 <li><a href='/#installing'
@@ -318,6 +320,8 @@ OpenSeadragon({
         <ul class="footer">
             <li><a href='/#examples-and-features'
                 >Examples &amp; Features</a></li>
+            <li><a href='/#plugins'
+                >Plugins</a></li>
             <li><a href='/#download'
                 >Download</a></li>
             <li><a href='/#installing'
