--- a/examples/ui-keyboard-navigation/index.html
+++ b/examples/ui-keyboard-navigation/index.html
@@ -38,6 +38,8 @@
             <ul>
                 <li><a href='/#examples-and-features'
                     >Examples &amp; Features</a></li>
+                <li><a href='/#plugins'
+                    >Plugins</a></li>
                 <li><a href='/#download'
                     >Download</a></li>
                 <li><a href='/#installing'
@@ -115,6 +117,8 @@ Then you can use the following keys:
         <ul class="footer">
             <li><a href='/#examples-and-features'
                 >Examples &amp; Features</a></li>
+            <li><a href='/#plugins'
+                >Plugins</a></li>
             <li><a href='/#download'
                 >Download</a></li>
             <li><a href='/#installing'
