--- a/examples/ui-zoom-and-pan/index.html
+++ b/examples/ui-zoom-and-pan/index.html
@@ -38,6 +38,8 @@
             <ul>
                 <li><a href='/#examples-and-features'
                     >Examples &amp; Features</a></li>
+                <li><a href='/#plugins'
+                    >Plugins</a></li>
                 <li><a href='/#download'
                     >Download</a></li>
                 <li><a href='/#installing'
@@ -184,6 +186,8 @@ maximum zoom range as well as the range of panning.
         <ul class="footer">
             <li><a href='/#examples-and-features'
                 >Examples &amp; Features</a></li>
+            <li><a href='/#plugins'
+                >Plugins</a></li>
             <li><a href='/#download'
                 >Download</a></li>
             <li><a href='/#installing'
