--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
             <ul>
                 <li><a href='/#examples-and-features'
                     >Examples &amp; Features</a></li>
+                <li><a href='/#plugins'
+                    >Plugins</a></li>
                 <li><a href='/#download'
                     >Download</a></li>
                 <li><a href='/#installing'
@@ -186,6 +188,13 @@
 </ul>
 
 
+<h2 id='plugins'>Plugins</h2>
+<p>There is currently one plugin available for OpenSeadragon, but more are in the works.</p>
+<ul class="square-list">
+    <li><a href="https://github.com/NISTDeepZoom/OpenSeadragonScalebar">OpenSeadragonScalebar</a> displays your image's scale in real-world measurements.</li>
+</ul>
+
+
 <h2 id='download'>Download</h2>
 <p>
     You can download OpenSeadragon 0.9.130 in
@@ -201,11 +210,18 @@
 
 <h2 id='installing'>Installing</h2>
 <p>
-OpenSeadragon has no external dependencies.  To install, just copy the
-JavaScript and images into your web root or static files directory.
-You can examine the source of this page to see how to include
-OpenSeadragon in a page.
-</p>
+OpenSeadragon has no external dependencies.  To install, just copy the <tt>openseadragon</tt> folder into your web root or static files directory, add it to your page, and create a viewer with the <tt>OpenSeadragon()</tt> function.</p>
+<p>Here is an example of basic usage:</p>
+<pre>
+    &lt;div id="openseadragon1" style="width: 800px; height: 600px;"&gt;&lt;/div&gt;
+    &lt;script src="/openseadragon/openseadragon.min.js"&gt;&lt;/script&gt;
+    &lt;script type="text/javascript"&gt;
+        var viewer = OpenSeadragon({
+            id: "openseadragon1",
+            prefixUrl: "/openseadragon/images/",
+            tileSources: "/path/to/my/image.dzi"
+        });
+    &lt;/script&gt;</pre>
 
 
 <h2 id='api-documentation'>API Documentation</h2>
@@ -238,6 +254,8 @@ OpenSeadragon in a page.
         <ul class="footer">
             <li><a href='/#examples-and-features'
                 >Examples &amp; Features</a></li>
+            <li><a href='/#plugins'
+                >Plugins</a></li>
             <li><a href='/#download'
                 >Download</a></li>
             <li><a href='/#installing'
