--- a/index.html
+++ b/index.html
@@ -189,9 +189,10 @@
 
 
 <h2 id='plugins'>Plugins</h2>
-<p>There is currently one plugin available for OpenSeadragon, but more are in the works.</p>
+<p>There are currently two plugins available for OpenSeadragon, but more are in the works.</p>
 <ul class="square-list">
     <li><a href="https://github.com/NISTDeepZoom/OpenSeadragonScalebar">OpenSeadragonScalebar</a> displays your image's scale in real-world measurements.</li>
+    <li><a href="https://github.com/msalsbery/openseadragonimaginghelper">OpenSeadragonImagingHelper</a> provides coordinate conversion, pan, and zoom methods in a simplified coordinate system.</li>
 </ul>
 
 
