--- a/examples/tilesource-tms/index.html
+++ b/examples/tilesource-tms/index.html
@@ -92,15 +92,18 @@
     </p>
 <pre>
 OpenSeadragon({
-    ...
+    id:                 "example-inline-configuration-for-tms",
+    prefixUrl:          "/openseadragon/images/",
     showNavigator:      false,
     wrapHorizontal:     true,
     zoomPerScroll:      1.2,
     minZoomImageRatio:  0.5,
     tileSources:   [{
-        type: 'openstreetmaps'
+        type:       'tiledmapservice',
+        tilesUrl:   'http://tilecache.osgeo.org/wms-c/tilecache.py/1.0.0/basic/',
+        width: 256 * 65534,
+        height: 256 * 32767
     }]
-    ...
 });</pre>
 </div>
 <script type="text/javascript">
